fixed spacing issues with mobile menu and close button

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
 
 .app-menu {
   position: fixed;
-  bottom: 5px;
+  bottom: 1.2rem;
   left: 33%;
   width: 33%;
   background: #48b04c;
