--- a/src/components/Navbar/SideDrawer.css
+++ b/src/components/Navbar/SideDrawer.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 auto;
 }
 
 .side-drawer li {
@@ -39,7 +40,7 @@
 
 #closer {
   position: fixed;
-  bottom: 5px;
+  bottom: 2rem;
   left: 33%;
   width: 33%;
   height: 50px;
